--- a/templates/event-outside.html
+++ b/templates/event-outside.html
@@ -4,7 +4,6 @@
 <head>
     {% block css %}
     <link href="{%  static 'css/try_comments.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href={%  static 'css/user_style.css' %} rel="stylesheet">
     {% endblock %}
 
@@ -49,8 +48,8 @@
                          src="http://www.gravatar.com/avatar/4e258d4679ba777947ac73537effb1c3?s=47&d=http%3A%2F%2Fwww.techrepublic.com%2Fbundles%2Ftechrepubliccore%2Fimages%2Ficons%2Fstandard%2Ficon-user-default.png"/>
                 </div>
                 <div class="user like-share">
-                    <a class="btn btn-default like" role="button" href="event_inside.html">Редагувати</a></div>
-
+                    <a class="btn btn-default like" role="button" href="/event_inside/">Редагувати</a>
+                </div>
             </div>
 
             <div class="col-md-4" id="user_info_box">
@@ -91,14 +90,14 @@
                         <div class="form-control about" id="out_mail"><a href="https://mail.google.com">yaryna.korduba@gmail.com</a>
                         </div>
                     </div>
-                    <div class="input-group">
-                        <span class="input-group-addon addon-org">Знайдіть нас</span>
-                        <div class="form-control about">
-                            <img class="logo soc-logo" src="static/fb_logo.png"/>
-                            <img class="logo soc-logo" src="static/twit_logo.png"/>
-                            <img class="logo soc-logo" src="static/insta_logo.png"/>
-                        </div>
-                    </div>
+{#                    <div class="input-group">#}
+{#                        <span class="input-group-addon addon-org">Знайдіть нас</span>#}
+{#                        <div class="form-control about">#}
+{#                            <img class="logo soc-logo" src="static/fb_logo.png"/>#}
+{#                            <img class="logo soc-logo" src="static/twit_logo.png"/>#}
+{#                            <img class="logo soc-logo" src="static/insta_logo.png"/>#}
+{#                        </div>#}
+{#                    </div>#}
                 </ul>
 
             </div>
