--- a/templates/organization-outside.html
+++ b/templates/organization-outside.html
@@ -41,7 +41,7 @@
                   <img id="user_photo" src="http://www.gravatar.com/avatar/4e258d4679ba777947ac73537effb1c3?s=47&d=http%3A%2F%2Fwww.techrepublic.com%2Fbundles%2Ftechrepubliccore%2Fimages%2Ficons%2Fstandard%2Ficon-user-default.png"/>
                 </div>
                 <div class="user like-share">
-                      <a class="btn btn-default like" role="button" href="organization_inside.html">Редагувати</a>
+                      <a class="btn btn-default like" role="button" href="/organization_inside/">Редагувати</a>
                 </div>
 
             </div>
