--- a/static/css/main-style.css
+++ b/static/css/main-style.css
@@ -67,7 +67,7 @@
 
 .btn-default:active:focus {
   background: #641e51;
-
+    color: white;
 }
 
 
@@ -120,8 +120,23 @@
 
 
 /*footer styling*/
+#social-icons {
+    padding-top: 4%;
+
+}
+#social-icons a {
+        color: #006203;
+}
+
+.nav li a {
+        color: #006203;
+
+}
 
 /*end footer styling*/
+
+
+
 
 
 /*end main colorful style*/
