--- a/templates/base.html
+++ b/templates/base.html
@@ -137,31 +137,31 @@
     <div class="col-lg-12">
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
-          <li><a href="#">Про нас</a></li>
+          <li><a href="/about_us/">Про нас</a></li>
         </ul>
       </div>
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
-          <li><a href="#">Наша команда</a></li>
+          <li><a href="/our_team/">Наша команда</a></li>
         </ul>
       </div>
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
-          <li><a href="#">Допомогти</a></li>
+          <li><a href="/not_available/">Допомогти</a></li>
         </ul>
       </div>
       <div class="col-md-3">
-        <ul>
+
           <!-- <div class="col-sm-3"> -->
-                    <div class="col-md-12">
-                    <ul class="social-network social-circle">
+                    <ul class="social-network social-circle social-icons" id="social-icons">
                         <a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a>
                         <a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
                         <a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
                         <a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a>
                         <a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                      </ul>
-        </div>
+                    </ul>
+
+
       </div>
     </div>
   </div>
@@ -185,17 +185,17 @@
     <div class="col-lg-12">
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
-          <li><a href="#">Про нас</a></li>
+          <li><a href="/about_us/">Про нас</a></li>
         </ul>
       </div>
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
-          <li><a href="#">Наша команда</a></li>
+          <li><a href="/our_team/">Наша команда</a></li>
         </ul>
       </div>
       <div class="col-md-3">
         <ul class="nav nav-pills nav-stacked">
-          <li><a href="#">Допомогти</a></li>
+          <li><a href="/not_available/">Допомогти</a></li>
         </ul>
       </div>
       <div class="col-md-3">
