--- a/templates/event-inside.html
+++ b/templates/event-inside.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="user like-share">
 
-                    <a class="btn btn-default like" role="button" href="^event-outside/">Зберегти</a>
+                    <a class="btn btn-default like" role="button" href="/event_outside/">Зберегти</a>
                 </div>
 
             </div>
@@ -72,20 +72,20 @@
                     <div class="input-group">
             <span class="input-group-addon addon-org">Місто</span>
                 <div class="ui-widget">
-                  <input id="tags" class="form-control">
+                  <input id="tags" class="form-control bordered-form" placeholder="Додаткова інформація">
                 </div>
             </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Адреса</span>
-                        <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+                        <input id="msg" type="text" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Час</span>
-                        <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+                        <input id="msg" type="text" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Вид</span>
-                        <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+                        <input id="msg" type="text" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
                     </div>
 
                 </ul>
@@ -98,21 +98,21 @@
                 <ul>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Наш вебсайт</span>
-                        <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+                        <input id="msg" type="text" class="form-control" name="msg" placeholder="Додаткова інформація">
                     </div>
 
                     <div class="input-group">
                         <span class="input-group-addon addon-org">e-mail</span>
-                        <input id="msg" type="text" class="form-control" name="msg" placeholder="Additional Info">
+                        <input id="msg" type="text" class="form-control" name="msg" placeholder="Додаткова інформація">
                     </div>
 
-                    <div class="input-group">
-                        <span class="input-group-addon addon-org">Знайдіть нас</span>
-                        <div class="form-control about">
-                            <img class="logo soc-logo" src="static/fb_logo.png"/>
-                            <img class="logo soc-logo" src="static/twit_logo.png"/>
-                            <img class="logo soc-logo" src="static/insta_logo.png"/>
-                        </div>
+{#                    <div class="input-group">#}
+{#                        <span class="input-group-addon addon-org">Знайдіть нас</span>#}
+{#                        <div class="form-control about">#}
+{#                            <img class="logo soc-logo" src="static/fb_logo.png"/>#}
+{#                            <img class="logo soc-logo" src="static/twit_logo.png"/>#}
+{#                            <img class="logo soc-logo" src="static/insta_logo.png"/>#}
+{#                        </div>#}
                 </ul>
 
             </div>
