--- a/templates/our-team.html
+++ b/templates/our-team.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container our-team-header">
 
         <!-- Marketing Icons Section -->
         <div class="row">
