--- a/templates/user-inside.html
+++ b/templates/user-inside.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-lg-12">
                 <div class="form-group">
-  <textarea class="form-control" placeholder="Введіть коротку інформацію про себе" rows="1" id="comment"></textarea>
+  <textarea class="form-control bordered-form" placeholder="Введіть коротку інформацію про себе" rows="1" id="comment"></textarea>
 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
             <div class="col-md-3" >
                 <div id="user_main_info" class="user">
                   <img id="user_photo" src="http://www.gravatar.com/avatar/4e258d4679ba777947ac73537effb1c3?s=47&d=http%3A%2F%2Fwww.techrepublic.com%2Fbundles%2Ftechrepubliccore%2Fimages%2Ficons%2Fstandard%2Ficon-user-default.png"/>
-                  <button class="btn btn-default like" role="button" href="#">Зберегти</button>
+                  <a class="btn btn-default like" role="button" href="/user_outside/">Зберегти</a>
 
                 </div>
             </div>
@@ -56,8 +56,8 @@
               <h3>Про мене</h3>
                 <ul>
                    <div class="input-group">
-                     <span class="input-group-addon addon-org">Сфери</span>
-                     <select id="multiselect" multiple="multiple" style="width: 100% !important;">
+                     <span class="input-group-addon addon-org"  >Сфери</span>
+                     <select id="multiselect" multiple="multiple" style="width: 100% !important; background: transparent;">
                          <option value="1">Довкілля</option>
                          <option value="2">Діти</option>
                          <option value="3">Літні люди</option>
@@ -67,12 +67,12 @@
                    <div class="input-group">
             <span class="input-group-addon addon-org">Місто</span>
                 <div class="ui-widget">
-                  <input id="tags" class="form-control">
+                    <input id="tags" class="form-control bordered-form" placeholder="Додаткова інформація">
                 </div>
             </div>
                   <div class="input-group">
             <span class="input-group-addon addon-org">Адреса</span>
-            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
             </div>
                    </ul>
             </div>
@@ -82,11 +82,11 @@
 
                    <div class="input-group">
             <span class="input-group-addon addon-org">Вебсайт</span>
-            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
             </div>
             <div class="input-group">
             <span class="input-group-addon addon-org">e-mail</span>
-            <input id="msg" class="form-control" name="msg" placeholder="Additional Info">
+            <input id="msg" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
             </div>
                   </ul>
             </div>
