--- a/templates/event-inside.html
+++ b/templates/event-inside.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col-lg-12">
                 <div class="form-group">
-  <textarea class="form-control" placeholder="Введіть коротку інформацію про подію" rows="1" id="comment"></textarea>
+  <textarea class="form-control bordered-form" placeholder="Введіть коротку інформацію про подію" rows="1" id="comment"></textarea>
 </div>
             </div>
 
@@ -125,7 +125,7 @@
         <div class="col-lg-12">
  <div class="form-group">
 {# <span class="input-group-addon addon-org">Детальна інформація</span>#}
-  <textarea class="form-control" placeholder="Введіть детальну інформацію про подію" rows="5" id="comment"></textarea>
+  <textarea class="form-control bordered-form" placeholder="Введіть детальну інформацію про подію" rows="5" id="comment"></textarea>
 </div>
         </div>
         </div>
