--- a/templates/user-inside.html
+++ b/templates/user-inside.html
@@ -55,7 +55,7 @@
               <h3>Про мене</h3>
                 <ul>
                    <div class="input-group">
-                     <span class="input-group-addon addon-org"  >Сфери</span>
+                     <span class="input-group-addon addon-org"  >Сфери:</span>
                      <select id="multiselect" multiple="multiple" style="width: 100% !important; background: transparent;">
                          <option value="1">Довкілля</option>
                          <option value="2">Діти</option>
@@ -64,13 +64,13 @@
                      </select>
                    </div>
                    <div class="input-group">
-            <span class="input-group-addon addon-org">Місто</span>
+            <span class="input-group-addon addon-org">Місто:</span>
                 <div class="ui-widget">
                     <input id="tags" class="form-control bordered-form" placeholder="Додаткова інформація">
                 </div>
             </div>
                   <div class="input-group">
-            <span class="input-group-addon addon-org">Адреса</span>
+            <span class="input-group-addon addon-org">Адреса:</span>
             <input id="msg" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
             </div>
                    </ul>
@@ -80,11 +80,11 @@
                 <ul>
 
                    <div class="input-group">
-            <span class="input-group-addon addon-org">Вебсайт</span>
+            <span class="input-group-addon addon-org">Вебсай:т</span>
             <input id="msg" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
             </div>
             <div class="input-group">
-            <span class="input-group-addon addon-org">e-mail</span>
+            <span class="input-group-addon addon-org">e-mail:</span>
             <input id="msg" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
             </div>
                   </ul>
