--- a/templates/main.html
+++ b/templates/main.html
@@ -81,7 +81,7 @@
                         <h4><i class="glyphicon glyphicon-home"></i> Додати організацію</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Loripsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
                         <a href="organization-reg.html" class="btn btn-default" id="panel-btn">Долучитися</a>
                     </div>
                 </div>
