--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -20,7 +20,7 @@
             </div>
   <div class="col-lg-12">
   <ol class="breadcrumb">
-  <li><a class="fnt-header" href="index.html">ми допомагаємо дітям-сиротам із виконанням домашніх завдань</a>
+  <li><a class="fnt-header" href="index.html">Ми допомагаємо дітям-сиротам із виконанням домашніх завдань!</a>
   </li>
   </ol>
   </div>
@@ -44,15 +44,15 @@
               <h3>Про мене</h3>
                 <ul>
                   <div class="input-group">
-                    <span class="input-group-addon addon-org">Сфери</span>
+                    <span class="input-group-addon addon-org">Сфери:</span>
                     <div class="form-control about"><a>діти</a></div>
                     </div>
                   <div class="input-group">
-                    <span class="input-group-addon addon-org">Місто</span>
+                    <span class="input-group-addon addon-org">Місто:</span>
                     <div class="form-control about"><a>Львів</a></div>
                    </div>
                    <div class="input-group">
-                    <span class="input-group-addon addon-org">Адреса</span>
+                    <span class="input-group-addon addon-org">Адреса:</span>
                     <div class="form-control about"><a>площа Соборна</a></div>
                    </div>
 
@@ -62,11 +62,11 @@
               <h3>Контактна інформація</h3>
               <ul>
                 <div class="input-group">
-                    <span class="input-group-addon addon-org">Вебсайт</span>
+                    <span class="input-group-addon addon-org">Вебсайт:</span>
                     <div class="form-control about"><a href="https://www.google.com.ua">www.google.com.ua</a></div>
                   </div>
                   <div class="input-group">
-                    <span class="input-group-addon addon-org">e-mail   </span>
+                    <span class="input-group-addon addon-org">e-mail:</span>
                 <div class="form-control about" id="out_mail"><a href="https://mail.google.com">yaryna.korduba@gmail.com</a></div>
              </div>
 {#             <div class="input-group">#}
