--- a/templates/enter.html
+++ b/templates/enter.html
@@ -23,6 +23,7 @@
                 <form class="form-signin" method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
+                    <button type="submit">Login</button>
                 </form>
             </div>
         </div>
