--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
                         <a href="/enter/"><span class="glyphicon glyphicon-user"></span>Увійти</a>
                     </li>
                     <li>
-                        <a href="/not_available/">Зареєструватись</a>
+                        <a href="/registration/">Зареєструватись</a>
                     </li>
                 </ul>
             </div>
