registration urls in templates

--- a/templates/main.html
+++ b/templates/main.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="panel-body">
                         <p>Loripsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="organization-reg.html" class="btn btn-default" id="panel-btn">Долучитися</a>
+                        <a href="/registration" class="btn btn-default" id="panel-btn">Долучитися</a>
                     </div>
                 </div>
             </div>
