Title, localization, forms

--- a/templates/main-reg.html
+++ b/templates/main-reg.html
@@ -64,7 +64,7 @@
   <form method="post" action="/user_registration/">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit">Зареєструватись</button>
   </form>
         </div>
     </div>
