--- a/templates/main.html
+++ b/templates/main.html
@@ -86,6 +86,19 @@
                     </div>
                 </div>
             </div>
+            {% if logged_in %}
+        <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="glyphicon glyphicon-user"></i>Знайти цікаву подію</h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <a href="user-reg.html" class="btn btn-default">Долучитися</a>
+                    </div>
+                </div>
+            </div>
+            {% else %}
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -97,6 +110,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
