Add /not_available/ to pages that are not ready yet

--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -20,7 +20,7 @@
             </div>
   <div class="col-lg-12">
   <ol class="breadcrumb">
-  <li><a class="fnt-header" href="index.html">Ми допомагаємо дітям-сиротам із виконанням домашніх завдань!</a>
+  <li>Ми допомагаємо дітям-сиротам із виконанням домашніх завдань!</a>
   </li>
   </ol>
   </div>
