--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
+                <a class="navbar-brand" href="/"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
                 </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,7 +65,7 @@
                     </li>
 
                     <li>
-                        <a href="/search/">Пошук</a>
+                        <a href="/not_available/">Пошук</a>
                     </li>
 
                     </li>
@@ -93,20 +93,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/not_available/"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
+                <a class="navbar-brand" href="/"><img id="ripka_logo" src="{% static 'static/ripka_logo_1.png' %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/about_us/">Організації</a>
+                        <a href="/not_available/">Організації</a>
                     </li>
                     <li>
-                        <a href="/about_us/">Події</a>
+                        <a href="/not_available/">Події</a>
                     </li>
 
                     <li>
-                        <a href="/search/">Пошук</a>
+                        <a href="/not_available/">Пошук</a>
                     </li>
 
                     </li>
