--- a/templates/check_email_after_registration.html
+++ b/templates/check_email_after_registration.html
@@ -25,7 +25,7 @@
 </div>
     <div class="container main">
         <h2 class="my">Дорогий користувачу, </h2>
-        <h3 class="my1">Залишилось лише зайти на ... та підтвердити реєстрацію.</h3>
+        <h3 class="my1">Залишилось лише зайти на вашу пошту та підтвердити реєстрацію.</h3>
         <img src="/static/static/green_tick.png" class="tick" style="width: 200px; height: 160px">
     </div>
 </div>
