--- a/templates/main.html
+++ b/templates/main.html
@@ -146,6 +146,10 @@
             </div>
             </div>
 
+        {% for event in events %}
+     <h1>{{  event.title }}</h1>
+     {% endfor %}
+
 
 
 
