--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
 
-  <form method="post" >
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }} 
     <button type="submit">Створити подію</button>
