--- a/templates/main.html
+++ b/templates/main.html
@@ -81,7 +81,7 @@
                         <h4><i class="glyphicon glyphicon-home"></i> Додати організацію</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Loripsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Після реєстрації у Вас з'являється можливість створити власну організацію для проведення подій для волонтерів.</p>
                         <a href="/registration" class="btn btn-default" id="panel-btn">Долучитися</a>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                         <h4><i class="glyphicon glyphicon-user"></i>Знайти цікаву подію</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Тут ви знайдете події, які можуть вас зацікавити.</p>
                         <a href="user-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <h4><i class="glyphicon glyphicon-user"></i>Зареєструватися</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Вам потрібно зареєструватись, щоб мати змогу долучитись до волонтерства.</p>
                         <a href="user-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <h4><i class="glyphicon glyphicon-volume-up"></i> Створити Подію</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Після реєстрації ви маєте змогу самі створювати події для волонтерів.</p>
                         <a href="listing-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
