--- a/templates/search.html
+++ b/templates/search.html
@@ -66,7 +66,7 @@
                         <form class="form-inline">
                           <center>
                         <div class="form-group">
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пошук">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="2-місячна пробна версія Пошук">
                          </div>
 
                         <select class="form-control">
