--- a/templates/search.html
+++ b/templates/search.html
@@ -451,7 +451,7 @@
                         <form class="form-inline" action="#" method="POST">
                           <center>
                         <div class="form-group">
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder=" tag пошук(маєбути)">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пошук">
                          </div>
 
                         <select class="form-control">
