added text to main page

--- a/templates/main.html
+++ b/templates/main.html
@@ -93,7 +93,7 @@
                         <h4><i class="glyphicon glyphicon-user"></i>Знайти цікаву подію</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Тут ви знайдете події, які можуть вас зацікавити. </p>
+                        <p>Тут ви знайдете події, які можуть вам сподобатися. Обирайте найцікавіше, користуючись кастомізованим пошуком </p>
                         <a href="user-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <h4><i class="glyphicon glyphicon-volume-up"></i> Створити Подію</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Після реєстрації ви маєте змогу самі створювати події для волонтерів.</p>
+                        <p>Після реєстрації ви маєте змогу самостійно. Знаходьте людей, що підтримають вашу ініціативу.</p>
                         <a href="listing-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
