Антон це те що ти простив - зміни на головній і сторінка event-outside

--- a/templates/event-outside.html
+++ b/templates/event-outside.html
@@ -24,12 +24,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row" id="heading">
             <div class="col-lg-12">
-                <h1 class="page-header">Старший брат</h1>
+                <h1 class="page-header">Львів без сміття!</h1>
             </div>
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a class="fnt-header" href="index.html">ми допомагаємо дітям-сиротам із виконанням домашніх
-                        завдань</a>
+                    <li><a class="fnt-header" href="index.html">Друзі, вітаємо! Наша організація хоче започаткувати громадцьку ініціативу щодо сміття у Львові. Долучайтесь до нас, якщо Вам теж не байдужий вигляд нашого міста!</a>
                     </li>
                 </ol>
             </div>
@@ -57,7 +56,7 @@
                 <ul>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Сфери</span>
-                        <div class="form-control about"><a>діти</a></div>
+                        <div class="form-control about"><a>Довкілля</a></div>
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Місто</span>
@@ -69,7 +68,7 @@
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Час</span>
-                        <div class="form-control about"><a>ЧТ, ПТ, 13:00-15:00</a></div>
+                        <div class="form-control about"><a>ЩОДЕННО, 13:00-15:00</a></div>
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Вид</span>
@@ -83,11 +82,11 @@
                 <ul>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Наш вебсайт</span>
-                        <div class="form-control about"><a href="https://www.google.com.ua">www.google.com.ua</a></div>
+                        <div class="form-control about"><a href="https://www.google.com.ua">www.lviv.com.ua</a></div>
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">e-mail</span>
-                        <div class="form-control about" id="out_mail"><a href="https://mail.google.com">yaryna.korduba@gmail.com</a>
+                        <div class="form-control about" id="out_mail"><a href="https://mail.google.com">chistuy_lviv@gmail.com</a>
                         </div>
                     </div>
 {#                    <div class="input-group">#}
@@ -161,48 +160,48 @@
                         <div class="detailBox">
                             <div class="titleBox">
                                 <label>Залиште Ваш коментар</label>
-                                <button type="button" class="close" aria-hidden="true">&times;</button>
+{#                                <button type="button" class="close" aria-hidden="true">&times;</button>#}
                             </div>
-                            <div class="commentBox">
-                                Будь ласка, будьте ввічливими :)
-                            </div>
+{#                            <div class="commentBox">#}
+{#                                Будь ласка, будьте ввічливими :)#}
+{#                            </div>#}
                             <div class="actionBox">
                                 <ul class="commentList">
                                     <li>
                                         <div class="commenterImage">
-                                            <img src="http://placekitten.com/50/50"/>
+{#                                            <img src="http://placekitten.com/50/50"/>#}
                                         </div>
                                         <div class="commentText">
-                                            <p class="">Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
+                                            <p class="">Cупер подія! Потрібно більше таких ініціатив щоб наше місто ставало кращим!</p> <span class="date sub-text">on March 5th, 2017</span>
 
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="commenterImage">
-                                            <img src="http://placekitten.com/45/45"/>
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">Hello this is a test comment and this comment is particularly
-                                                very
-                                                long and it goes on and on and on.</p> <span class="date sub-text">on March 5th, 2014</span>
-
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="commenterImage">
-                                            <img src="http://placekitten.com/40/40"/>
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>
-
-                                        </div>
-                                    </li>
-                                </ul>
-                                <form class="form-inline" role="form">
-                                    <div class="form-group">
-                                        <input class="form-control" id="comment_input" type="text"
-                                               placeholder="Your comments"/>
-                                    </div>
+{#                                        <div class="commenterImage">#}
+{#                                            <img src="http://placekitten.com/45/45"/>#}
+{#                                        </div>#}
+{#                                        <div class="commentText">#}
+{#                                            <p class="">Hello this is a test comment and this comment is particularly#}
+{#                                                very#}
+{#                                                long and it goes on and on and on.</p> <span class="date sub-text">on March 5th, 2014</span>#}
+{##}
+{#                                        </div>#}
+{#                                    </li>#}
+{#                                    <li>#}
+{#                                        <div class="commenterImage">#}
+{#                                            <img src="http://placekitten.com/40/40"/>#}
+{#                                        </div>#}
+{#                                        <div class="commentText">#}
+{#                                            <p class="">Hello this is a test comment.</p> <span class="date sub-text">on March 5th, 2014</span>#}
+{##}
+{#                                        </div>#}
+{#                                    </li>#}
+{#                                </ul>#}
+{#                                <form class="form-inline" role="form">#}
+{#                                    <div class="form-group">#}
+{#                                        <input class="form-control" id="comment_input" type="text"#}
+{#                                               placeholder="Your comments"/>#}
+{#                                    </div>#}
                                     <div class="form-group">
                                         <button class="btn btn-default">Прокоментувати</button>
                                     </div>
@@ -219,17 +218,17 @@
         <div class="row">
             <div class="col-md-11">
                 <h3>Додаткова інформація</h3>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
-                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>
+                <p>Телефонуйте нам за номером +38093-123-45-67!</p>
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
+{#                <p>Працюємо із неповносправними дітьми. Вони потребують вашої підтримки!</p>#}
             </div>
         </div>
     </div>
