--- a/templates/main.html
+++ b/templates/main.html
@@ -140,9 +140,9 @@
                     <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Project Name</a>
+                    <a href="portfolio-item.html">Львів без сміття!</a>
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p>Друзі, вітаємо! Наша організація хоче започаткувати  громадську ініціативу щодо сміття у Львові. Долучайтесь до нас, якщо Вам теж не байдужий вигляд нашого міста!</p>
             </div>
             </div>
 
