changed caousel images

--- a/templates/main.html
+++ b/templates/main.html
@@ -37,13 +37,13 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('http://langleychildren.com/wp-content/uploads/2015/07/langley-children-many-children.jpg');"></div>
+                <div class="fill" style="background-image:url('http://lasallechurch.org/wp-content/uploads/2015/01/banner-getinvolved.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://nohp.org.in/images/nohp/ban4.jpg');"></div>
+                <div class="fill" style="background-image:url('https://www.crucial.com.au/wp-content/uploads/2014/10/ccwrapper.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
