--- a/templates/event-outside.html
+++ b/templates/event-outside.html
@@ -24,11 +24,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row" id="heading">
             <div class="col-lg-12">
-                <h1 class="page-header">Львів без сміття!</h1>
+                <h1 class="page-header">Будиночок на дереві</h1>
             </div>
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                    <li><a class="fnt-header" href="index.html">Друзі, вітаємо! Наша організація хоче започаткувати громадцьку ініціативу щодо сміття у Львові. Долучайтесь до нас, якщо Вам теж не байдужий вигляд нашого міста!</a>
+                     <li><a class="fnt-header" href="index.html">Запрошуємо усіх приєднатись до будівництва прекрасного будиночку на дереві, де наші дітки могли б весело проводити час.</a>
                     </li>
                 </ol>
             </div>
