--- a/templates/main.html
+++ b/templates/main.html
@@ -139,12 +139,13 @@
         <div class="row">
             <div class="col-md-4 img-portfolio">
                 <a href="portfolio-item.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x400" alt="">
+                    <img class="img-responsive img-hover" src="/static/static/New_treehouse.png" alt="">
                 </a>
                 <h3>
-                    <a href="portfolio-item.html">Львів без сміття!</a>
+                    <a href="portfolio-item.html" style="font-family: 'Trebuchet MS',fantasy">Будиночок на дереві</a>
                 </h3>
-                <p>Друзі, вітаємо! Наша організація хоче започаткувати  громадську ініціативу щодо сміття у Львові. Долучайтесь до нас, якщо Вам теж не байдужий вигляд нашого міста!</p>
+                <p style="font-family: 'Trebuchet MS',cursive">Запрошуємо усіх приєднатись до будівництва прекрасного будиночку на дереві, де наші дітки могли б весело проводити час разом. </p>
+                <h4 style="margin-left: 50%; font-style: italic; font-family: 'Trebuchet MS',cursive">З повагою, Гомер.</h4>
             </div>
             </div>
 
