Add two urls with user_id (event_inside and event_outside)

--- a/templates/event-outside.html
+++ b/templates/event-outside.html
@@ -28,7 +28,7 @@
             </div>
             <div class="col-lg-12">
                 <ol class="breadcrumb">
-                     <li><a class="fnt-header" href="index.html">Запрошуємо усіх приєднатись до будівництва прекрасного будиночку на дереві, де наші дітки могли б весело проводити час.</a>
+                     <li><a class="fnt-header" href="index.html">Запрошуємо усіх приєднатись до будівництва прекрасного будиночку на дереві, де діти могли б спілкуватись між собою та весело проводити час.</a>
                     </li>
                 </ol>
             </div>
@@ -44,10 +44,10 @@
             <div class="col-md-3">
                 <div id="user_main_info" class="user">
                     <img id="user_photo"
-                         src="http://www.gravatar.com/avatar/4e258d4679ba777947ac73537effb1c3?s=47&d=http%3A%2F%2Fwww.techrepublic.com%2Fbundles%2Ftechrepubliccore%2Fimages%2Ficons%2Fstandard%2Ficon-user-default.png"/>
+                         src=/static/static/bart_tree.jpg>
                 </div>
                 <div class="user like-share">
-                    <a class="btn btn-default like" role="button" href="/event_inside/">Редагувати</a>
+                    <a class="btn btn-default like" role="button" href="/event_inside/">Долучитись</a>
                 </div>
             </div>
 
@@ -56,24 +56,21 @@
                 <ul>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Сфери</span>
-                        <div class="form-control about"><a>Довкілля</a></div>
+                        <div class="form-control about"><a>Будівництво</a></div>
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Місто</span>
-                        <div class="form-control about"><a>Львів</a></div>
+                        <div class="form-control about"><a>Springfield</a></div>
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Адреса</span>
-                        <div class="form-control about"><a>Хоткевича, 17/2А</a></div>
+                        <div class="form-control about"><a>742 Evergreen Terrace</a></div>
                     </div>
                     <div class="input-group">
                         <span class="input-group-addon addon-org">Час</span>
                         <div class="form-control about"><a>ЩОДЕННО, 13:00-15:00</a></div>
                     </div>
-                    <div class="input-group">
-                        <span class="input-group-addon addon-org">Вид</span>
-                        <div class="form-control about"><a>багаторазова</a></div>
-                    </div>
+
 
                 </ul>
             </div>
@@ -81,12 +78,8 @@
                 <h3>Контактна інформація</h3>
                 <ul>
                     <div class="input-group">
-                        <span class="input-group-addon addon-org">Наш вебсайт</span>
-                        <div class="form-control about"><a href="https://www.google.com.ua">www.lviv.com.ua</a></div>
-                    </div>
-                    <div class="input-group">
                         <span class="input-group-addon addon-org">e-mail</span>
-                        <div class="form-control about" id="out_mail"><a href="https://mail.google.com">chistuy_lviv@gmail.com</a>
+                        <div class="form-control about" id="out_mail"><a href="https://mail.google.com">bart_simson@gmail.com</a>
                         </div>
                     </div>
 {#                    <div class="input-group">#}
