--- a/templates/event-inside.html
+++ b/templates/event-inside.html
@@ -47,7 +47,7 @@
             <div class="col-md-3">
                 <div id="user_main_info" class="user">
                     <img id="user_photo"
-                         src="http://www.gravatar.com/avatar/4e258d4679ba777947ac73537effb1c3?s=47&d=http%3A%2F%2Fwww.techrepublic.com%2Fbundles%2Ftechrepubliccore%2Fimages%2Ficons%2Fstandard%2Ficon-user-default.png"/>
+                         src=/static/static/bart_tree.jpg>
                 </div>
                 <div class="user like-share">
 
