Антон це те що ти простив - зміни на головній і сторінка event-outside

--- a/templates/main.html
+++ b/templates/main.html
@@ -102,10 +102,10 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="glyphicon glyphicon-user"></i>Зареєструватися</h4>
+                        <h4><i class="glyphicon glyphicon-user"></i> Зареєструватися</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Вам потрібно зареєструватись, щоб мати змогу долучитись до волонтерства.</p>
+                        <p>Якщо ви хочете отримати нові досвід, звання і враження - потрібно зареєструватись, щоб мати змогу долучитись до волонтерства.</p>
                         <a href="user-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
             </div>
         </div>
 
-        <hr>
+
 
 
         </div>
