--- a/templates/main.html
+++ b/templates/main.html
@@ -103,10 +103,10 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="glyphicon glyphicon-user"></i>Зареєструватися</h4>
+                        <h4><i class="glyphicon glyphicon-user"></i> Зареєструватися</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Ви можете стати частиною спільноти волонтерів, які не жаліють своїх сил та часу на допомогу іншим людям. Потрібно лише зареєструватись.</p>
+                        <p>Ви можете стати частиною спільноти волонтерів, які не жаліють своїх сил та часу на допомогу іншим людям. А також отримати новий досвід, знання, друзів та враження! Потрібно лише зареєструватись.</p>
                         <a href="user-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
