--- a/templates/main.html
+++ b/templates/main.html
@@ -118,7 +118,7 @@
                         <h4><i class="glyphicon glyphicon-volume-up"></i> Створити Подію</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Після реєстрації ви маєте змогу самостійно. Знаходьте людей, що підтримають вашу ініціативу.</p>
+                        <p>Після реєстрації ви маєте змогу самостійно створювати події. Знаходьте людей, що підтримають вашу ініціативу та створюйте нові можливості для себе і оточуючих.Вам обов'язково продобається!</p>
                         <a href="listing-reg.html" class="btn btn-default">Долучитися</a>
                     </div>
                 </div>
