--- a/templates/user-inside.html
+++ b/templates/user-inside.html
@@ -80,7 +80,7 @@
                 <ul>
 
                    <div class="input-group">
-            <span class="input-group-addon addon-org">Вебсай:т</span>
+            <span class="input-group-addon addon-org">Вебсайт:</span>
             <input id="msg" class="form-control bordered-form" name="msg" placeholder="Додаткова інформація">
             </div>
             <div class="input-group">
