--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,8 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="{% static 'css/modern-business.css' %}" rel="stylesheet">
-{#<link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">#}
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="{%  static 'css/main-style.css' %}" rel="stylesheet">
 
 
@@ -26,10 +25,14 @@
     {% endblock %}
 
     <script src="{% static 'js/jquery.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/tether.min.js' %}"></script>
+
     <script src="{%  static 'js/bootstrap.min.js' %}"></script>
-   <script type="text/javascript" src="{% static 'js/tether.min.js' %}"></script>
+{#   <script type="text/javascript" src="{% static 'js/tether.min.js' %}"></script>#}
+{#    <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>#}
     <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
     <script src="{% static 'js/carousel.js' %}"></script>
+
     <script src="{%  static 'js/main-header.js' %}"></script>
 
     {% block js %}
@@ -81,7 +84,7 @@
     </nav>
 
 {% else %}
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" id="header-cont" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -126,8 +129,6 @@
 {% block content %}
 
 {% endblock %}
-
-{% if logged_in %}
 
     <footer>
     <div class="container text-center">
@@ -176,55 +177,6 @@
 </div>
 </footer>
 
-{% else %}
-<footer>
-    <div class="container text-center">
-    <hr />
-  <div class="row ">
-    <div class="col-lg-12">
-      <div class="col-md-3">
-        <ul class="nav nav-pills nav-stacked">
-          <li><a href="/about_us/">Про нас</a></li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul class="nav nav-pills nav-stacked">
-          <li><a href="/our_team/">Наша команда</a></li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul class="nav nav-pills nav-stacked">
-          <li><a href="/not_available/">Допомогти</a></li>
-        </ul>
-      </div>
-      <div class="col-md-3">
-        <ul>
-          <!-- <div class="col-sm-3"> -->
-                    <div class="col-md-12">
-                    <ul class="social-network social-circle">
-                        <a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a>
-                        <a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a>
-                        <a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                      </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <hr>
-    <div class="row">
-        <div class="col-lg-12">
-            <ul class="nav nav-pills nav-justified">
-                <!-- <conter> -->
-                <li><a href="/">© 2017 Lviv_Volunteers.</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-    </footer>
-{% endif %}
 
 </body>
 </html>
