--- a/templates/enter.html
+++ b/templates/enter.html
@@ -23,11 +23,10 @@
                 <form class="form-signin" method="post">
                         {% csrf_token %}
                         {{ form.as_p }}
-                    <button type="submit">Login</button>
+                    <button type="submit" id="login" class="btn btn-default">Login</button>
                 </form>
             </div>
         </div>
     </div>
         <!--  -->
-    <hr>
 {% endblock %}
