--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,9 +4,9 @@
 
 {% block content %}
   <h2>Login</h2>
-  <form method="post">
+  <form id="content-log" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+      <button type="submit">Login</button>
   </form>
 {% endblock %}
