Add some real links like Search

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,12 +63,12 @@
                     </li>
 
                     <li>
-                        <a href="/not_available/">Пошук</a>
+                        <a href="/search/">Пошук</a>
                     </li>
 
                     </li>
                     <li>
-                        <a href="/not_available/"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
+                        <a href="/user_outside/{{user_id}}"><span class="glyphicon glyphicon-user"></span>Моя сторінка</a>
                     </li>
                       <li>
                         <a href="logout/"><span class="glyphicon glyphicon-user"></span>Вийти</a>
@@ -104,7 +104,7 @@
                     </li>
 
                     <li>
-                        <a href="/not_available/">Пошук</a>
+                        <a href="/search/">Пошук</a>
                     </li>
 
                     </li>
