--- a/templates/user-inside.html
+++ b/templates/user-inside.html
@@ -30,7 +30,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row" id="heading">
             <div class="col-lg-12">
-                <h1 class="page-header">Taras Shevchenko</h1>
+                <h1 class="page-header">{{ user.username }}</h1>
             </div>
             <div class="col-lg-12">
                 <div class="form-group">
