--- a/templates/user-outside.html
+++ b/templates/user-outside.html
@@ -16,11 +16,11 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row" id="heading">
             <div class="col-lg-12">
-                <h1 class="page-header">Taras Shevchenko</h1>
+                <h1 class="page-header">{{user.username}}</h1>
             </div>
   <div class="col-lg-12">
   <ol class="breadcrumb">
-  <li>Ми допомагаємо дітям-сиротам із виконанням домашніх завдань!</a>
+  <li>Ми допомагаємо дітям-сиротам із виконанням домашніх завдань!
   </li>
   </ol>
   </div>
@@ -49,7 +49,7 @@
                     </div>
                   <div class="input-group">
                     <span class="input-group-addon addon-org">Місто:</span>
-                    <div class="form-control about"><a>Львів</a></div>
+                    <div class="form-control about"><a>Місто А</a></div>
                    </div>
                    <div class="input-group">
                     <span class="input-group-addon addon-org">Адреса:</span>
@@ -67,7 +67,7 @@
                   </div>
                   <div class="input-group">
                     <span class="input-group-addon addon-org">e-mail:</span>
-                <div class="form-control about" id="out_mail"><a href="https://mail.google.com">yaryna.korduba@gmail.com</a></div>
+                <div class="form-control about" id="out_mail"><a href="https://mail.google.com">{{user.email}}</a></div>
              </div>
 {#             <div class="input-group">#}
 {#               <span class="input-group-addon addon-org">Знайдіть нас</span>#}
